--- a/ui/mm-react/package.json
+++ b/ui/mm-react/package.json
@@ -2,8 +2,10 @@
   "name": "mm-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://bvelt.github.io/mastermind",
   "dependencies": {
     "core-js": "3",
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
@@ -11,6 +13,8 @@
     "redux": "^4.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
